crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__null_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - "Null"
            - start: 0
              end: 4
              file: "<input>"
        span:
          start: 0
          end: 5
          file: "<input>"
