crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__number_literal.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Literal:
            - Number: 42
            - start: 0
              end: 2
              file: "<input>"
        span:
          start: 0
          end: 3
          file: "<input>"
