crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__operator_precedence_comparison_over_logical.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: And
            left:
              Binary:
                op: Lt
                left:
                  Literal:
                    - Number: 1
                    - start: 0
                      end: 1
                      file: "<input>"
                right:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                      file: "<input>"
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            right:
              Binary:
                op: Gt
                left:
                  Literal:
                    - Number: 3
                    - start: 9
                      end: 10
                      file: "<input>"
                right:
                  Literal:
                    - Number: 4
                    - start: 13
                      end: 14
                      file: "<input>"
                span:
                  start: 9
                  end: 14
                  file: "<input>"
            span:
              start: 0
              end: 14
              file: "<input>"
        span:
          start: 0
          end: 15
          file: "<input>"
