crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_chained_member_calls.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 208
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Member:
                target:
                  Identifier:
                    name: a
                    span:
                      start: 0
                      end: 1
                      file: "<input>"
                member:
                  name: b
                  span:
                    start: 2
                    end: 3
                    file: "<input>"
                args: []
                type_args: []
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            member:
              name: c
              span:
                start: 6
                end: 7
                file: "<input>"
            args: []
            type_args: []
            span:
              start: 0
              end: 9
              file: "<input>"
        span:
          start: 0
          end: 10
          file: "<input>"
