crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_complex_member_chain.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 222
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Index:
                target:
                  Index:
                    target:
                      Index:
                        target:
                          Identifier:
                            name: json
                            span:
                              start: 0
                              end: 4
                              file: "<input>"
                        index:
                          Single:
                            Literal:
                              - String: data
                              - start: 5
                                end: 11
                                file: "<input>"
                        span:
                          start: 0
                          end: 12
                          file: "<input>"
                    index:
                      Single:
                        Literal:
                          - String: items
                          - start: 13
                            end: 20
                            file: "<input>"
                    span:
                      start: 0
                      end: 21
                      file: "<input>"
                index:
                  Single:
                    Literal:
                      - Number: 0
                      - start: 22
                        end: 23
                        file: "<input>"
                span:
                  start: 0
                  end: 24
                  file: "<input>"
            member:
              name: as_string
              span:
                start: 25
                end: 34
                file: "<input>"
            args: []
            type_args: []
            span:
              start: 0
              end: 36
              file: "<input>"
        span:
          start: 0
          end: 37
          file: "<input>"
