crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_function_no_params.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Function:
      name:
        name: foo
        span:
          start: 3
          end: 6
          file: "<input>"
      type_params: []
      params: []
      return_type:
        Named:
          - number
          - start: 12
            end: 18
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - Return:
              value:
                Literal:
                  - Number: 42
                  - start: 28
                    end: 30
                    file: "<input>"
              span:
                start: 21
                end: 31
                file: "<input>"
        tail_expr: ~
        span:
          start: 19
          end: 33
          file: "<input>"
      span:
        start: 0
        end: 33
        file: "<input>"
