crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_function_with_complex_body.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Function:
      name:
        name: factorial
        span:
          start: 4
          end: 13
          file: "<input>"
      type_params: []
      params:
        - name:
            name: n
            span:
              start: 14
              end: 15
              file: "<input>"
          type_ref:
            Named:
              - number
              - start: 17
                end: 23
                file: "<input>"
          ownership: ~
          span:
            start: 14
            end: 23
            file: "<input>"
      return_type:
        Named:
          - number
          - start: 28
            end: 34
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - If:
              cond:
                Binary:
                  op: Le
                  left:
                    Identifier:
                      name: n
                      span:
                        start: 44
                        end: 45
                        file: "<input>"
                  right:
                    Literal:
                      - Number: 1
                      - start: 49
                        end: 50
                        file: "<input>"
                  span:
                    start: 44
                    end: 50
                    file: "<input>"
              then_block:
                statements:
                  - Return:
                      value:
                        Literal:
                          - Number: 1
                          - start: 68
                            end: 69
                            file: "<input>"
                      span:
                        start: 61
                        end: 70
                        file: "<input>"
                tail_expr: ~
                span:
                  start: 51
                  end: 76
                  file: "<input>"
              else_block:
                statements:
                  - Return:
                      value:
                        Binary:
                          op: Mul
                          left:
                            Identifier:
                              name: n
                              span:
                                start: 99
                                end: 100
                                file: "<input>"
                          right:
                            Call:
                              callee:
                                Identifier:
                                  name: factorial
                                  span:
                                    start: 103
                                    end: 112
                                    file: "<input>"
                              args:
                                - Binary:
                                    op: Sub
                                    left:
                                      Identifier:
                                        name: n
                                        span:
                                          start: 113
                                          end: 114
                                          file: "<input>"
                                    right:
                                      Literal:
                                        - Number: 1
                                        - start: 117
                                          end: 118
                                          file: "<input>"
                                    span:
                                      start: 113
                                      end: 118
                                      file: "<input>"
                              span:
                                start: 103
                                end: 119
                                file: "<input>"
                          span:
                            start: 99
                            end: 119
                            file: "<input>"
                      span:
                        start: 92
                        end: 120
                        file: "<input>"
                tail_expr: ~
                span:
                  start: 82
                  end: 126
                  file: "<input>"
              span:
                start: 41
                end: 126
                file: "<input>"
        tail_expr: ~
        span:
          start: 35
          end: 128
          file: "<input>"
      span:
        start: 1
        end: 128
        file: "<input>"
