crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_function_with_params.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Function:
      name:
        name: add
        span:
          start: 3
          end: 6
          file: "<input>"
      attributes: []
      is_async: false
      type_params: []
      params:
        - name:
            name: x
            span:
              start: 14
              end: 15
              file: "<input>"
          type_ref:
            Named:
              - number
              - start: 17
                end: 23
                file: "<input>"
          ownership: Borrow
          mutable: false
          span:
            start: 7
            end: 23
            file: "<input>"
        - name:
            name: y
            span:
              start: 32
              end: 33
              file: "<input>"
          type_ref:
            Named:
              - number
              - start: 35
                end: 41
                file: "<input>"
          ownership: Borrow
          mutable: false
          span:
            start: 25
            end: 41
            file: "<input>"
      return_type:
        Named:
          - number
          - start: 46
            end: 52
            file: "<input>"
      return_ownership: ~
      predicate: ~
      body:
        statements:
          - Return:
              value:
                Binary:
                  op: Add
                  left:
                    Identifier:
                      name: x
                      span:
                        start: 62
                        end: 63
                        file: "<input>"
                  right:
                    Identifier:
                      name: y
                      span:
                        start: 66
                        end: 67
                        file: "<input>"
                  span:
                    start: 62
                    end: 67
                    file: "<input>"
              span:
                start: 55
                end: 68
                file: "<input>"
        tail_expr: ~
        span:
          start: 53
          end: 70
          file: "<input>"
      span:
        start: 0
        end: 70
        file: "<input>"
