crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__parse_grouping.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Binary:
            op: Mul
            left:
              Group:
                expr:
                  Binary:
                    op: Add
                    left:
                      Literal:
                        - Number: 1
                        - start: 1
                          end: 2
                          file: "<input>"
                    right:
                      Literal:
                        - Number: 2
                        - start: 5
                          end: 6
                          file: "<input>"
                    span:
                      start: 1
                      end: 6
                      file: "<input>"
                span:
                  start: 0
                  end: 7
                  file: "<input>"
            right:
              Literal:
                - Number: 3
                - start: 10
                  end: 11
                  file: "<input>"
            span:
              start: 0
              end: 11
              file: "<input>"
        span:
          start: 0
          end: 12
          file: "<input>"
